be/feat: msa to mono